<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_action_toolbar_more" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon" />

        <TextView
            android:id="@+id/tv_logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/action_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_logo_title"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/shape_login_ll"
            android:divider="@drawable/vertical_line"
            android:orientation="vertical"
            android:showDividers="middle">


            <LinearLayout
                android:id="@+id/ll_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="@dimen/dp_5"
                    android:hint="@string/hint_username"
                    android:maxLength="20"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_alpha"
                    android:textSize="@dimen/text_size_14" />

                <ImageView
                    android:id="@+id/img_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/transparent"
                    android:padding="@dimen/dp_5"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/cancel"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_username"
                android:background="@color/transparent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="@dimen/dp_5"
                    android:hint="@string/hint_pwd"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_alpha"
                    android:textSize="@dimen/text_size_14" />

                <ImageView
                    android:id="@+id/img_look"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/transparent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/look"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_login"
            style="@style/common_button"
            android:layout_below="@+id/ll_login"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_register"
                android:textColor="@color/gray"
                android:textSize="14sp" />


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>